--- a/emnist final.ipynb
+++ b/emnist final.ipynb
@@ -12,11 +12,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[master f4b9bb3] Status Update\n",
+      " 1 file changed, 17 insertions(+), 22 deletions(-)\n",
+      " rename dec25.ipynb => emnist final.ipynb (85%)\n",
+      "Enumerating objects: 4, done.\n",
+      "Counting objects: 100% (4/4), done.\n",
+      "Delta compression using up to 8 threads\n",
+      "Compressing objects: 100% (3/3), done.\n",
+      "Writing objects: 100% (3/3), 29.80 KiB | 4.97 MiB/s, done.\n",
+      "Total 3 (delta 1), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (1/1), completed with 1 local object.\u001b[K\n",
+      "To https://github.com/nirmalhk7/HandwritingRecognizer.git\n",
+      "   8efead1..f4b9bb3  master -> master\n"
+     ]
+    }
+   ],
    "source": [
-    "letterDictionary={}"
+    "!gitstatus"
    ]
   },
   {
